crates/reap-pm-live/tests/ui/product_has_no_okx_private_or_order.stderr
error[E0599]: no method named `okx_private` found for reference `&PmProduct<M>` in the current scope
 --> tests/ui/product_has_no_okx_private_or_order.rs:4:21
  |
4 |     let _ = product.okx_private();
  |                     ^^^^^^^^^^^ method not found in `&PmProduct<M>`

error[E0599]: no method named `okx_order` found for reference `&PmProduct<M>` in the current scope
 --> tests/ui/product_has_no_okx_private_or_order.rs:5:21
  |
5 |     let _ = product.okx_order();
  |                     ^^^^^^^^^ method not found in `&PmProduct<M>`

error[E0599]: no method named `okx_account` found for reference `&PmProduct<M>` in the current scope
 --> tests/ui/product_has_no_okx_private_or_order.rs:6:21
  |
6 |     let _ = product.okx_account();
  |                     ^^^^^^^^^^^ method not found in `&PmProduct<M>`
